fix: Remove flicker when selecting different engines for displaying their URLs.

--- a/extension/content/engineUrlView.css
+++ b/extension/content/engineUrlView.css
@@ -1,11 +1,17 @@
 /* Set the general styling for the table */
 #engine-urls-table table {
+  table-layout: fixed;
   width: 100%;
   border-collapse: collapse;
   margin: 20px 0;
   font-size: 1rem;
   text-align: center;
   border: 1px solid lightgray;
+}
+
+#engine-urls-table th:first-child,
+#engine-urls-table td:first-child {
+  width: max-content;
 }
 
 /* Style for the table headers */
